# rpi4-parallelisation-issue

./: CMakeLists.txt  README.md
include/: matrix.h  matrix_blas_multipler.h  matrix_data_factory.h  matrix_eigen_multiplier.h  matrix_gemm_eigen.h  matrix_gemm_eigen_multiplier.h  matrix_multiplier.h  matrix_neon_multiplier.h  matrix_openmp_multiplier.h  matrix_operation_event.h  matrix_ruy_multiplier.h  matrix_seq_multiplier.h  mm4convkn_stream_assembler.h  stream_assembler.h
src/: mem_matrix_multiplication_benchmark.cpp  multiplier_test.cpp
